# capsule

./: .gitattributes  .gitignore  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml  elizaos-plugin-release.yml  lint.yml  mcp-integration-release.yml  python-adapter-release.yml  release.yml  test.yml  typescript-adapter-release.yml
crates/capsule-cli/: Cargo.toml  pyproject.toml
crates/capsule-cli/docs/: README-pypi.md
crates/capsule-cli/npm/: README.md  package.json
crates/capsule-cli/src/: cli.rs  main.rs
crates/capsule-cli/src/commands/: build.rs  exec.rs  mod.rs  run.rs  shared.rs  worker.rs
crates/capsule-core/: Cargo.toml
crates/capsule-core/src/: lib.rs
crates/capsule-core/src/config/: database.rs  fingerprint.rs  log.rs  manifest.rs  mod.rs
crates/capsule-core/src/storage/: database.rs  log.rs
crates/capsule-core/src/wasm/: execution_policy.rs  mod.rs  runtime.rs  state.rs
crates/capsule-core/src/wasm/commands/: create.rs  run.rs  start.rs
crates/capsule-core/src/wasm/compiler/: javascript.rs  mod.rs  python.rs
crates/capsule-core/src/wasm/utilities/: cache.rs  host_validator.rs  mod.rs  path_validator.rs  task_config.rs  task_reporter.rs  wit_manager.rs
crates/capsule-core/src/wasm/utilities/introspection/: javascript.rs  python.rs  scanner.rs
crates/capsule-sdk/javascript/: README.md  package-lock.json  package.json  tsconfig.json
crates/capsule-sdk/javascript/scripts/: copy-unenv-polyfills.mjs
crates/capsule-sdk/javascript/src/: app.ts  env.ts  files.ts  hostApi.ts  http.ts  index.ts  run.ts  task.ts
crates/capsule-sdk/javascript/src/polyfills/: buffer.ts  events.ts  fs-promises.ts  fs.ts  os.ts  path.ts  process.ts  stream-web.ts  stream.ts  url.ts
crates/capsule-sdk/python/: MANIFEST.in  pyproject.toml  test_sdk.py
crates/capsule-sdk/python/src/capsule/: __init__.py  app.py  decorator.py  host_api.py  run.py  selectors.py  socket.py  worker.py
crates/capsule-wit/: capsule.wit  deps.toml
examples/hello-world/: main.py
examples/http-request/: main.py
examples/javascript/dialogue-evaluator/: .env.example  README.md  capsule.toml  main.ts  package-lock.json  package.json  tsconfig.json
examples/javascript/dialogue-evaluator/output/: evaluated-dialogue-lines.csv
examples/javascript/dialogue-evaluator/source/: dialogue-lines.json
examples/javascript/eval-untrusted-code/: main.ts  package-lock.json  package.json
examples/javascript/file-access/: main.ts  package-lock.json  package.json  tsconfig.json
examples/javascript/file-access/data/: output.txt
examples/javascript/http-request/: http-request.ts  package.json
examples/javascript/langchain-dialogue-evaluator/: package.json
examples/javascript/langchain-dialogue-evaluator/output/: evaluated-dialogue-lines.csv
examples/javascript/langchain-dialogue-evaluator/source/: dialogue-lines.json
examples/javascript/limit-testing/: limits-test.ts  package.json  tsconfig.json
examples/javascript/mastra-agent/: README.md  capsule.ts  package.json  tsconfig.json
examples/javascript/mastra-agent/src/mastra/: index.ts
examples/javascript/mastra-agent/src/mastra/agents/: code-agent.ts
examples/javascript/run-from-existing-project/: README.md  capsule_sandbox.ts  main.ts  package.json
examples/python/exec-untrusted-code/: main.py
examples/python/file-access/: main.py
examples/python/file-access/data/: input.txt
examples/python/hello-world/: capsule.toml  main.py
examples/python/http-request/: main.py
examples/python/langchain-agent/: README.md
examples/python/langchain-sample/: README.md  agent.py  requirements.txt
examples/python/limit-testing/: limits_test.py
examples/python/recursive-tasks/: main.py
examples/python/run-from-existing-project/: README.md  capsule_sandbox.py  main.py
examples/python/voice-of-customer/: capsule.toml  requirements.txt
examples/python/voice-of-customer/src/model/: feedback.py
examples/voice-of-customer/src/: main.py
examples/voice-of-customer/src/tasks/: analyze.py  fetch.py
integrations/: README.md
integrations/elizaos-plugin/: README.md  build.ts  package.json  tsconfig.json
integrations/elizaos-plugin/src/: index.ts  plugin.ts
integrations/elizaos-plugin/src/__tests__/e2e/: capsule-plugin.e2e.ts
integrations/mcp-server/: README.md  index.ts  package-lock.json  package.json
integrations/mcp-server/src/: js_sandbox.ts  python_sandbox.py
integrations/python-adapter/: README.md  pyproject.toml
integrations/python-adapter/capsule_adapter/: __init__.py  execution.py  session.py
integrations/python-adapter/capsule_run_adapter/: __init__.py  execution.py
integrations/python-adapter/capsule_run_adapter/sandboxes/: __init__.py
integrations/python-adapter/examples/: run_javascript.py  run_python.py
integrations/python-adapter/src/: js_sandbox.ts  python_sandbox.py
integrations/python-adapter/src/js_sandbox/: execution.ts  index.ts  serialization.ts
integrations/python-adapter/src/python_sandbox/: index.py  serialization.py
integrations/typescript-adapter/: README.md  index.ts  package-lock.json  package.json  session.ts  tsconfig.json
integrations/typescript-adapter/examples/: README.md  package.json  run-javascript.ts  run-python.ts
integrations/typescript-adapter/src/: python_sandbox.py
integrations/typescript-adapter/src/js_sandbox/: execution.ts  index.ts  serialization.ts
integrations/typescript-adapter/src/python_sandbox/: index.py
(+1 files in other folders)
