[package]
name = "capsule-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
nanoid = "0.4.0"
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = "1.48.0"
wasmtime = { version = "29.0.0", features = ["component-model", "async"] }
wasmtime-wasi = "29.0.0"


[dev-dependencies]
rustfmt = "0.10.0"



