[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capsule"
version = "0.1.0"
description = "Capsule Python SDK - run AI agent tasks in secure WASM sandboxes"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Capsule Contributors"}
]
keywords = [
    "webassembly",
    "sandbox",
    "agents",
    "isolation",
    "llm",
    "ai"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "componentize-py>=0.19.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/mavdol/capsule"
Repository = "https://github.com/mavdol/capsule"
Documentation = "https://github.com/mavdol/capsule"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
capsule = ["py.typed"]
